# ComputerVisionwithDL

./: Body Language Decoder Tutorial.ipynb  README.md  class.names  prueba_cuda.py  pyproject.toml  yolov8.ipynb
.ipynb_checkpoints/: Body Language Decoder Tutorial-checkpoint.ipynb
runs/pose/train/: args.yaml  events.out.tfevents.1695266745.4913f2f7ec98.3220.0  results.csv
runs/pose/train1000/: args.yaml  events.out.tfevents.1695309829.9d378324647c.2630.0  results.csv
train/train_coco1000/: config.yaml
train/train_custom/: config.yaml
train/train_custom/data/labels/train/: 000001163.txt  000003072.txt  000004812.txt  000005283.txt  000024087.txt  000024293.txt  000030708.txt  000033016.txt  000071686.txt  000085370.txt  000111209.txt  000128443.txt  000142573.txt  000142834.txt  000147382.txt  000156511.txt  000165249.txt  000208151.txt  000298013.txt  000336238.txt  000337885.txt  000338399.txt  000346846.txt  000360424.txt  000365631.txt  000377819.txt  000392606.txt  000410145.txt  000419716.txt  000428176.txt  000437064.txt  000440161.txt  099391199.txt  099406198.txt  099436898.txt  099490782.txt  099503123.txt  099615079.txt  099656142.txt
train/train_custom/data/labels/val/: 099672640.txt  099712450.txt  099718235.txt  099834751.txt  099856081.txt  099890470.txt  099935030.txt  099945052.txt  099955770.txt  099971767.txt
