[tool.poetry]
name = "cvwithdl"
version = "0.1.0"
description = "Computer vision with Deep Learning course projects"
authors = ["Andrea Franco <andrefrak@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
mediapipe = "^0.10.3"
opencv-python = "^4.8.0.76"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
jupyterlab = "^4.0.5"
ultralytics = "^8.0.181"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
